update app version add localized string

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -304,7 +304,7 @@
 "kMyFriends" = "My Friends";
 "kFollow" = "Followers";
 "kFans" = "Fans";
-"kNoFollow" = "No follower";
+"kNoFollow" = "No follower yet. Click 'Search User' button below to follow your friends.";
 "kNoFans" = "No fan";
 "kEdit" = "Edit";
 "kSearchUser" = "Search User";
@@ -312,14 +312,14 @@
 "kAddAsFriend" = "Follow";
 "kAlreadyBeFriend" = "Followed";
 "kDidNottFindThisUser" = "No user matched";
-"kUpdateFollowFailed" = "Network error, update follows failed!";
+"kUpdateFollowFailed" = "Network error, update followers failed!";
 "kUpdateFansFailed" = "Network error, update fans failed!";
-"kFollowing" = "Following...";
+"kFollowing" = "Sending request...";
 "kFollowSuccessfully" = "Follow successfully!";
-"kFollowFailed" = "Network error, follow failed!";
-"kUnfollowing" = "Unfollowin...";
-"kUnfollowSuccessfully" = "Unfollow successfully!";
-"kUnfollowFailed" = "Network error, unfollow failed!";
+"kFollowFailed" = "Network error, follow user failed!";
+"kUnfollowing" = "Sending request...";
+"kUnfollowSuccessfully" = "Unfollow user successfully!";
+"kUnfollowFailed" = "Network error, fail to unfollow user!";
 "kEnterWords" = "Please enter the content";
 "kSearchUserPlaceholder" = "Nickname/Facebook/Email";
 "kSearchFailedTitle" = "Network error";
