--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -445,3 +445,6 @@
 "kInviteFriendsTitle" = "邀请好友";
 "kNoRoomTips" = "暂无房间，请点击下面的［创建房间］建立自己的房间，或者［搜索房间］加入其它好友的房间";
 "kSearchNoResult" = "未搜索到符合条件的房间";
+
+"kPushMessage" = "@%@ 新建了一个好友房间——\"%@\", 邀请你加入。赶紧加入好友房间，和好友猜猜画画吧!";
+
