--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -433,4 +433,4 @@
 "kNoRoomTips" = "No Room. Create or search room.";
 "kSearchNoResult" = "No room matched";
 
-"kPushMessage" = "@%@ created a new room, \"%@\". Hurry to Join and play with your friends.";
+"kPushMessage" = "%@ created a new room, \"%@\". Hurry to Join and play with your friends.";
