--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -434,3 +434,4 @@
 "kSearchNoResult" = "No room matched";
 
 "kPushMessage" = "%@ created a new room, \"%@\". Hurry to Join and play with your friends.";
+"kGuessWhatIDraw" = "Guess what i drew?";
