--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -444,3 +444,4 @@
 "kSearchNoResult" = "未搜索到符合條件的房間。";
 
 "kPushMessage" = "%@ 新建了一個好友房間——\"%@\", 邀請你加入。趕緊加入好友房間，和好友猜猜畫畫吧!";
+"kGuessWhatIDraw" = "猜猜我畫了什麼?";
