add table view refresh header.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -426,7 +426,7 @@
 "kNoneInvited" = "0 friend invited";
 "kFirstGame" = "It's your first time to play, please register first.";
 
-"kMyFriend" = "Friends";
+"kFriendControl" = "Friends";
 
 "kFriendPlayTitle" = "Rooms";
 "kInviteFriends" = "Invite";
