--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -448,4 +448,4 @@
 
 "kPushMessage" = "%@ 新建了一个好友房间——\"%@\", 邀请你加入。赶紧加入好友房间，和好友猜猜画画吧!";
 "kGuessWhatIDraw" = "猜猜我画了什么？";
-"kGuessWhatTheyDraw" = "猜猜Ta画了什么";
+"kGuessWhatTheyDraw" = "猜猜TA画了什么？";
