--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -434,6 +434,6 @@
 "kNoRoomTips" = "No Room. Create or search room.";
 "kSearchNoResult" = "No room matched";
 
-"kPushMessage" = "%@ created a new room, \"%@\". Hurry to Join and play with your friends.";
-"kGuessWhatIDraw" = "Guess what i drew?";
+"kPushMessage" = "%@ just created a room at [Draw Lively] game, \"%@\". Come and play with your friend now!";
+"kGuessWhatIDraw" = "Guess what's this?";
 "kGuessWhatTheyDraw" = "Guess what's this?";
