--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -343,6 +343,7 @@
 "kSayToYou" = "Say to you: %@";
 "kSayToYou:" = "Say to you:";
 "kNobodyInRoom" = "you can chat private nobody in room";
+"kSayToXXX" = "Say to【%@】: ";
 
 "kPayAttentionToMe" = "Follow me";
 "kDrawTillDawn" = "Awesome";
