--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -356,6 +356,7 @@
 "kSayToYou" = "对你说: %@";
 "kSayToYou:" = "对你说:";
 "kNobodyInRoom" = "房间里没有其他人时，不能私聊";
+"kSayToXXX" = "对【%@】说: ";
 
 "kPayAttentionToMe" = "关注我吧";
 "kDrawTillDawn" = "决战到天明";
