page the room list.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -438,3 +438,5 @@
 "kPushMessage" = "%@ just created a room at [Draw Lively] game, \"%@\". Come and play with your friend now!";
 "kGuessWhatIDraw" = "Guess what's this?";
 "kGuessWhatTheyDraw" = "Guess what's this?";
+
+"kMore" = "More...";
