--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 "kBuying" = "發送購買請求中...";
 "kSendingRequest" = "發送消息中...";
 "kLoading" = "加載數據中...";
+"kLoadMore" = "加載中...";
 
 "kOK" = "確定";
 "kSubmit" = "提交";
