--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -455,7 +455,6 @@
 
 "kMore" = "更多...";
 "kGender" = "性別";
-
 "kClear" = "清空";
-"kDeleteAllWarning" = "你即將刪除所有作品!";
+"kDeleteAllWarning" = "刪除當前的所有作品嗎？";
 "kAttention" = "注意";
