--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -270,7 +270,7 @@
 "kNone" = "None";
 "kGifNotice" = "The size of GIF is %.2fMB,it may cost some time for publishing";
 "kGifTips" = "Tips";
-"kContentRepeat" = "You have reported it just now!";
+"kContentRepeat" = "You have submited it just now!";
 
 
 
@@ -447,4 +447,5 @@
 "kAttention" = "Attentions";
 
 "kVolume" = "Volume";
-
+"kAddWords" = "Submit some words";
+"kAddWordsTips" = "Using blank to seperator words...";
