--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -321,6 +321,10 @@
 "kNoFans" = "暂未有粉丝";
 "kEdit" = "编辑";
 "kSearchUser" = "搜索用户";
+"kSMSInvite" = "短信邀请";
+"kWeixinInvite" = "微信邀请";
+"kSelectInvitation" = "请选择邀请方式";
+"kInvitationInfo" = "我在玩猜猜画画，你也一起来玩吧";
 "kSearch" = "搜索";
 "kAddAsFriend" = "关注";
 "kAlreadyBeFriend" = "已关注";
