--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -195,7 +195,7 @@
 "kShare_via_Facebook" = "通過Facebook分享";
 "kShare_via_Twitter" = "通過Twitter分享";
 "kShare_via_Weixin" = "分享到微信";
-"kWeixinNotInstall" = "你沒有安裝微信或微信版本較低，暫時不能發送!";
+"kWeixinNotInstall" = "對不起，您沒有安裝微信或微信版本較低，無法發送微信消息!";
 
 "Message" = "消息";
 
@@ -282,7 +282,7 @@
 "kGifNotice" = "生成的動態圖片大小為%.2fMB,上傳該圖片將會消耗好些時間，對於部分微博（如新浪）不可上傳大於5MB的圖片。";
 "kGifTips" = "溫馨提示";
 
-"kContentRepeat" = "不要重復提交哦!";
+"kContentRepeat" = "不要重複提交哦!";
 
 /*the new words below without Japanese*/
 
@@ -357,10 +357,13 @@
 
 "kMale" = "男";
 "kFemale" = "女";
-"kNobodyInRoom" = "房間裏沒有其他人時，不能私聊";
-"kSayToXXX" = "對【%@】说:";
-"kSayToAll" = "對【所有人】说:";
+"kNobodyInRoom" = "房間裡沒有其他人時，不能私聊";
+"kSayToXXX" = "對【%@】說:";
+"kSayToAll" = "對【所有人】說:";
 "kSayToYou" = "對【你】說:";
+
+
+
 
 "kPayAttentionToMe" = "關注我吧";
 "kDrawTillDawn" = "決戰到天明";
@@ -438,8 +441,7 @@
 "kNext" = "前進";
 "kRefresh" = "刷新";
 "kStop" = "停止";
-"kMusicWrong" = "您下載的文件可能不是正確的音樂，無法正常播放";
-
+"kMusicWrong" = "您下載的文件可能不是正確的音樂文件，無法正常播放";
 "kUserLogin" = "用戶登錄";
 
 "kNoneInvited" = "尚未邀請朋友";
@@ -461,11 +463,12 @@
 "kClear" = "清空";
 "kDeleteAllWarning" = "刪除當前的所有作品嗎？";
 "kAttention" = "注意";
+
 "kVolume" = "音量";
 "kAddWords" = "提交新詞";
-"kAddWordsTips" = "詞之間用空格或者換行分開，如\“添加 新詞\”";
+"kAddWordsTips" = "詞之間用空格或者換行分開，如\“大地中國\”";
 "kAddWordsSucc" = "提交成功，感謝貢獻";
 "kAddWordsFail" = "提交失敗，請稍後再試";
-"kContentFormatError" = "格式錯誤，仔細檢查一下哦";
-"kWordTooLong" = "\"%@\"太长了";
-"kIllegalCharacter" = "\"%@\"有非法字符哦";
+"kContentFormatError" = "格式錯誤，詞之間的分隔符號只能是空格或者換行，仔細檢查一下哦";
+"kWordTooLong" = "\"%@\"太長了，一次詞最多只能有7個字";
+"kIllegalCharacter" = "\"%@\"有非法字符哦，字只能是中文，不能包括字母、數字和標點符號";
