--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -195,7 +195,7 @@
 "kShare_via_Facebook" = "通过Facebook分享";
 "kShare_via_Twitter" = "通过Twitter分享";
 "kShare_via_Weixin" = "分享到微信";
-"kWeixinNotInstall" = "你没有安装微信或微信版本较低，暂时不能发送!";
+"kWeixinNotInstall" = "对不起，您没有安装微信或微信版本较低，无法发送微信消息!";
 
 "Message" = "消息";
 
