--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -472,3 +472,6 @@
 "kContentFormatError" = "格式错误，词之间的分隔符号只能是空格或者换行，仔细检查一下哦";
 "kWordTooLong" = "\"%@\"太长了，一次词最多只能有7个字";
 "kIllegalCharacter" = "\"%@\"有非法字符哦，字只能是中文，不能包括字母、数字和标点符号";
+
+"kFakeIAPPurchase" = "验证您的购买收据失败，请确认您通过了正确的途径进行购买";
+"kNetworkBroken" = "您太久没有操作，自动退出房间，或者您的网络连接中断了";
