--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -472,3 +472,6 @@
 "kContentFormatError" = "格式錯誤，詞之間的分隔符號只能是空格或者換行，仔細檢查一下哦";
 "kWordTooLong" = "\"%@\"太長了，一次詞最多只能有7個字";
 "kIllegalCharacter" = "\"%@\"有非法字符哦，字只能是中文，不能包括字母、數字和標點符號";
+
+"kFakeIAPPurchase" = "驗證您的IAP購買失敗，請確認您通過了正確的途徑進行購買";
+"kNetworkBroken" = "您太久沒有操作，自動退出房間，或者您的網絡連接中斷了";
