--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -86,7 +86,7 @@
 
 "kCoinsNotEnoughTitle" = "消息";
 "kCoinsNotEnough" = "不好意思，你的金币不够了，是不是现在购买一些金币？";
-"kCoinsNotEnoughTips" = "不好意思，你的金币不够了，请在游戏结束之后购买。";
+"kCoinsNotEnoughTips" = "不好意思，你的金币不够%d了，请在游戏结束之后购买些金币。";
 
 "kCheckInTitle" = "消息";
 "kCheckInMessage" = "哇，你今日签到获得了%d个金币，记得明天再来!";
@@ -301,8 +301,9 @@
 
 //4.27 add by Gamy
 "kBuyColorDialogTitle" = "购买颜色";
+"kBuyPenDialogTitle" = "购买笔";
 "kBuyColorDialogMessage" = "购买颜色将花费%d金币，确定吗？";
-
+"kBuyPenDialogMessage" = "购买笔将花费%d金币，确定吗？";
 "kPublishWeiboSuccAndEarnCoins" = "微博已发送，你获得了%d金币！";
 "guest" = "路人甲";
 "kOnlineUserCount" = "在线用户共%d人";
