add setting chatVoice

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -465,3 +465,8 @@
 
 "kFakeIAPPurchase" = "Fail to verify the transaction receipt. Please check if you try the right way to make purchase.";
 "kNetworkBroken" = "Network broken or you haven't take actions for too long time.";
+
+"kChatVoice" = "Chat Voice";
+"kEnableAlways" = "Enable";
+"kEnableWifi" = "Enable only WiFi";
+"kEnableNot" = "Not enable";
