add youmi wall support

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -471,4 +471,8 @@
 "kChatVoice" = "Chat Voice";
 "kEnableAlways" = "Enable";
 "kEnableWifi" = "Enable only WiFi";
-"kEnableNot" = "Not enable";
+"kEnableNot" = "Disable";
+
+"kCurrentCoins" = "Coins ";
+"kCurrentItems" = "Items ";
+"kFreeGetCoins" = "Free Coins";
