--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -485,3 +485,9 @@
 "kCurrentCoins" = "現有金幣 ";
 "kCurrentItems" = "現有錦囊 ";
 "kFreeGetCoins" = "免費金幣";
+
+"kCustomWordManage" = "自定義詞語";
+"kAddCustomWord" = "添加詞語";
+"kInputWord" = "輸入詞語";
+"kInputWordPlaceholder" = "請輸入新詞語";
+
