update offline function.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -482,3 +482,5 @@
 "kInputWord" = "Input Words";
 "kInputWordPlaceholder" = "Please input a new word";
 
+"kDrawing" = "Drawing";
+"kGuessing" = "Guessing";
