--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -482,3 +482,6 @@
 "kInputWord" = "Input Words";
 "kInputWordPlaceholder" = "Please input a new word";
 
+"kUpgradeMsg" = "Congratulations!You upgraded to level %d";
+"kDegradeMsg" = "You ran away too much times, now degrade to level %d";
+"kLevelInfo" = "level:%d,exp:%d/%d";
