--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -491,3 +491,6 @@
 "kInputWord" = "输入词语";
 "kInputWordPlaceholder" = "请输入新词语";
 
+"kUpgradeMsg" = "恭喜！您刚刚升到第 %d级";
+"kDegradeMsg" = "你逃得太多啦，都降到第%d级了";
+"kLevelInfo" = "等级:%d,经验值:%d/%d";
