--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -491,3 +491,6 @@
 "kInputWord" = "輸入詞語";
 "kInputWordPlaceholder" = "請輸入新詞語";
 
+"kUpgradeMsg" = "恭喜！您剛剛升到第 %d級";
+"kDegradeMsg" = "你逃得太多啦，都降到第%d級了";
+"kLevelInfo" = "等級:%d,經驗值:%d/%d";
