--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -492,7 +492,8 @@
 "kInputWordPlaceholder" = "請輸入新詞語";
 "kUpdateWord" = "更新詞語";
 "kInputWordEmpty" = "詞語不能為空";
-
+"kMyWords" = "我的詞庫";
+"kNoCustomWords" = "你還沒有訂詞語，可以在設定裡面訂自己的詞語";
 
 "kUpgradeMsg" = "恭喜！您剛剛升到第 %d級";
 "kDegradeMsg" = "你逃得太多啦，都降到第%d級了";
