--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -486,14 +486,17 @@
 "kCurrentItems" = "现有锦囊 ";
 "kFreeGetCoins" = "免费金币";
 
-"kCustomWordManage" = "自定义词语";
+"kCustomWordManage" = "词库管理";
 "kAddCustomWord" = "添加词语";
 "kInputWord" = "输入词语";
 "kInputWordPlaceholder" = "请输入新词语";
 "kUpdateWord" = "更新词语";
 "kInputWordEmpty" = "词语不能为空";
 "kMyWords" = "我的词库";
-"kNoCustomWords" = "你还没有定义词语，可以在设置里面定义自己的词语";
+"kNoCustomWords" = "你还没有定义词语，可以在设置里定义自己的词语";
+"kClose" = "关闭";
+"kExistWord" = "已存在此词语";
+"kSureUseThisWord" = "确定选择[%@]吗?";
 
 "kUpgradeMsg" = "恭喜！您刚刚升到第 %d级";
 "kDegradeMsg" = "你逃得太多啦，都降到第%d级了";
