--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -486,14 +486,17 @@
 "kCurrentItems" = "現有錦囊 ";
 "kFreeGetCoins" = "免費金幣";
 
-"kCustomWordManage" = "自定義詞語";
+"kCustomWordManage" = "詞庫管理";
 "kAddCustomWord" = "添加詞語";
 "kInputWord" = "輸入詞語";
 "kInputWordPlaceholder" = "請輸入新詞語";
 "kUpdateWord" = "更新詞語";
 "kInputWordEmpty" = "詞語不能為空";
 "kMyWords" = "我的詞庫";
-"kNoCustomWords" = "你還沒有訂詞語，可以在設定裡面訂自己的詞語";
+"kNoCustomWords" = "你還沒有訂詞語，可以在設定裡訂自己的詞語";
+"kClose" = "關閉";
+"kExistWord" = "已存在此詞語";
+"kSureUseThisWord" = "確定選擇[%@]嗎?";
 
 "kUpgradeMsg" = "恭喜！您剛剛升到第 %d級";
 "kDegradeMsg" = "你逃得太多啦，都降到第%d級了";
