--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -500,3 +500,8 @@
 
 "kSubmitSuccTitle" = "Submit Successfully";
 "kSubmitSuccMsg" = "Congratulations! Submit Successfully! One more?";
+
+"kDedutCoinChangeOpusAlertMessage" = "If you change the opus, the system will deduct 1 coin.";
+"kNoCoinChangeOpusMessage" = "You have no coins, buy Some!";
+"kChangeOpusTitle" = "Change Opus";
+"kGuessDraw" = "Guessing";
