--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -486,6 +486,7 @@
 "kClose" = "Close";
 "kExistWord" = "Already exists in this word";
 "kSureUseThisWord "="Sure to use [%@] ? ";
+"kWordTooLong" = "Length can not more than 7";
 
 "kUpgradeMsg" = "Congratulations!You upgraded to level %d";
 "kDegradeMsg" = "You ran away too much times, now degrade to level %d";
@@ -496,4 +497,7 @@
 
 "kUpdateWord" = "Update Word";
 "kInputWordEmpty" = "word can not be empty";
+
+"kChatListTitle" = "Chat";
+
 
