--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -497,6 +497,7 @@
 "kClose" = "關閉";
 "kExistWord" = "已存在此詞語";
 "kSureUseThisWord" = "確定選擇[%@]嗎?";
+"kWordTooLong" = "詞語不能超過7個字";
 
 "kUpgradeMsg" = "恭喜！您剛剛升到第 %d級";
 "kDegradeMsg" = "你逃得太多啦，都降到第%d級了";
@@ -505,3 +506,5 @@
 "kDrawing" = "畫畫中";
 "kGuessing" = "猜畫中";
 
+
+"kChatListTitle" = "聊天";
