--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -489,7 +489,7 @@
 
 "kUpgradeMsg" = "Congratulations!You upgraded to level %d";
 "kDegradeMsg" = "You ran away too much times, now degrade to level %d";
-"kLevelInfo" = "level:%d,exp:%d/%d";
+"kLevelInfo" = "level:%d    exp:%d/%d";
 
 "kDrawing" = "Drawing";
 "kGuessing" = "Guessing";
