--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -500,7 +500,7 @@
 
 "kUpgradeMsg" = "恭喜！您刚刚升到第 %d级";
 "kDegradeMsg" = "你逃得太多啦，都降到第%d级了";
-"kLevelInfo" = "等级:%d,经验值:%d/%d";
+"kLevelInfo" = "等级:%d    经验值:%d/%d";
 
 "kDrawing" = "画画中";
 "kGuessing" = "猜画中";
