--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -510,3 +510,8 @@
 "kOneMore" = "One More";
 
 "kGuessUserDraw" = "Guessing %@'s draw";
+
+"kFeedTitle" = "Feed";
+"kAllFeed" = "All";
+"kHotFeed" = "Hot";
+"kMyFeed" = "My";
