--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -85,7 +85,7 @@
 "kStartingGame" = "请求开始游戏中...";
 
 "kCoinsNotEnoughTitle" = "消息";
-"kCoinsNotEnough" = "不好意思，你的金币不够了，是不是现在购买一些金币？";
+"kCoinsNotEnough" = "不好意思，你的金币不够了，是不是要获取免费金币？";
 "kCoinsNotEnoughTips" = "不好意思，你的金币不够%d了，请在游戏结束之后购买些金币。";
 
 "kCheckInTitle" = "消息";
